--- a/single-node/single-node.yaml
+++ b/single-node/single-node.yaml
@@ -312,6 +312,8 @@ Resources:
       Tags:
         - Key: Name
           Value: suffix_WSO2BastionInstance
+        - Key: User
+          Value: achini@wso2.com        
       NetworkInterfaces:
         - DeleteOnTermination: 'true'
           Description: Primary network interface
@@ -406,6 +408,8 @@ Resources:
         - Key: Name
           Value: suffix_WSO2ISInstance
           PropagateAtLaunch: 'true'
+        - Key: User
+          Value: achini@wso2.com       
         - Key: cluster
           Value: is
           PropagateAtLaunch: 'true'
