--- a/two-node-cluster/2-node-cluster.yml
+++ b/two-node-cluster/2-node-cluster.yml
@@ -322,6 +322,8 @@ Resources:
       Tags:
         - Key: Name
           Value: suffix_WSO2BastionInstance
+        - Key: User
+          Value: achini@wso2.com
       NetworkInterfaces:
         - DeleteOnTermination: 'true'
           Description: Primary network interface
@@ -369,6 +371,8 @@ Resources:
       Tags:
         - Key: Name
           Value: suffix_WSO2NGinxInstance
+        - Key: User
+          Value: achini@wso2.com       
       NetworkInterfaces:
         - DeleteOnTermination: 'true'
           Description: Primary network interface
@@ -451,6 +455,8 @@ Resources:
         - Key: Name
           Value: suffix_WSO2ISInstance_1
           PropagateAtLaunch: 'true'
+        - Key: User
+          Value: achini@wso2.com
         - Key: cluster
           Value: is
           PropagateAtLaunch: 'true'
@@ -472,6 +478,8 @@ Resources:
         - Key: Name
           Value: suffix_WSO2ISInstance_2
           PropagateAtLaunch: 'true'
+        - Key: User
+          Value: achini@wso2.com
         - Key: cluster
           Value: is
           PropagateAtLaunch: 'true'
