--- a/single-node/setup/resources/deployment.toml
+++ b/single-node/setup/resources/deployment.toml
@@ -16,7 +16,7 @@ type = "database_unique_id"
 #connection_password = "admin"
 #base_dn = "dc=wso2,dc=org"
 [user_store.properties]
-#CaseInsensitiveUsername = false
+CaseInsensitiveUsername = false
 SCIMEnabled=true
 IsBulkImportSupported=false
 
