--- a/single-node/setup/resources/deployment.toml
+++ b/single-node/setup/resources/deployment.toml
@@ -71,3 +71,11 @@ password = "wso2carbon"
 [truststore]
 name = "client-truststore.jks"
 password = "wso2carbon"
+
+[authentication_policy]
+disable_account_lock_handler=true
+
+[identity_mgt.events.schemes.WorkflowPendingUserAuthnHandler]
+subscriptions=[]
+
+
