--- a/single-node/setup/resources/deployment.toml
+++ b/single-node/setup/resources/deployment.toml
@@ -72,11 +72,11 @@ password = "wso2carbon"
 name = "client-truststore.jks"
 password = "wso2carbon"
 
-#[authentication_policy]
-#disable_account_lock_handler=true
+[authentication_policy]
+disable_account_lock_handler=true
 
-#[identity_mgt.events.schemes.WorkflowPendingUserAuthnHandler]
-#subscriptions=[]
+[identity_mgt.events.schemes.WorkflowPendingUserAuthnHandler]
+subscriptions=[]
 
-#[authorization_manager.properties]
-#GroupAndRoleSeparationEnabled=false
+[authorization_manager.properties]
+GroupAndRoleSeparationEnabled=false
